# crewAI

./: 404.html
1 learning/course 1 Multiagent Systems/: L2_research_write_article-Copy1.ipynb  L3_customer_support.ipynb  L4_tools_customer_outreach.ipynb  L5_tasks_event_planning.ipynb  L6_collaboration_financial_analysis.ipynb  L7_job_application_crew.ipynb
1 learning/course 2 Advanced Examples/: L_1.ipynb  L_3.ipynb  L_5.ipynb  L_6.ipynb
2 testing/: rfq_multiagent.ipynb
2 testing/1 rfq_multiagent/: README.md  pyproject.toml
2 testing/1 rfq_multiagent/src/rfq_multiagent/crews/rfq_crew/config/: agents.yaml
2 testing/2_rfq_multiagent/: README.md  pyproject.toml
2 testing/2_rfq_multiagent/src/2_rfq_multiagent/: main.py
2 testing/2_rfq_multiagent/src/2_rfq_multiagent/crews/quotation_crew/: README.md  pyproject.toml
2 testing/2_rfq_multiagent/src/2_rfq_multiagent/crews/quotation_crew/src/quotation_crew/: crew.py  main.py
2 testing/2_rfq_multiagent/src/2_rfq_multiagent/crews/quotation_crew/src/quotation_crew/config/: agents.yaml  tasks.yaml
2 testing/contract_multiagent/: L7_job_application_crew.ipynb  contract_manager_crew.ipynb
2 testing/contract_multiagent/docs/: CEME1_EPC_Contract.md  Subcontractors.md
2 testing/corrupcion_politica/: README.md  pyproject.toml
2 testing/corrupcion_politica/src/corrupcion_politica/: crew.py  main.py
2 testing/corrupcion_politica/src/corrupcion_politica/config/: agents.yaml  tasks.yaml
2 testing/rfq_multiagent/: rfq_multiagent.ipynb
2 testing/test_0/: README.md  pyproject.toml  report.md
2 testing/test_0/src/test_0/: crew.py  main.py
2 testing/test_0/src/test_0/config/: agents.yaml  tasks.yaml
latest_ai_development/: pyproject.toml
latest_ai_development/src/latest_ai_development/: crew.py  main.py
src/crewai/cli/: cli.py
src/crewai/cli/tools/: main.py
tests/cli/tools/: test_main.py
