[project]
name = "rfq_multiagent"
version = "0.1.0"
description = "rfq_multiagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.75.0,<1.0.0"
]

[project.scripts]
rfq_multiagent = "rfq_multiagent.main:run"
run_crew = "rfq_multiagent.main:run"
train = "rfq_multiagent.main:train"
replay = "rfq_multiagent.main:replay"
test = "rfq_multiagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
